--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "url": "https://github.com/sandeepraju/sound-graph/issues"
   },
   "dependencies": {
+    "body-parser": "^1.7.0",
     "express": "~4.8.8",
-    "socket.io": "~1.1.0",
-    "body-parser": "^1.7.0"
+    "forever": "^0.11.1",
+    "socket.io": "~1.1.0"
   }
 }
